--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,81 @@
-@import "normalize.css";
+@import url(normalize.css);
+.wrapper {
+  width: 100%;
+  margin: 50px auto;
+  text-align: center; }
+
+.flip-box {
+  display: inline-block;
+  margin: 20px;
+  text-decoration: none;
+  perspective: 1000px; }
+  .flip-box:hover .flip {
+    transform: rotateY(180deg); }
+  .flip-box .flip {
+    position: relative;
+    cursor: pointer;
+    transition: 0.5s;
+    transform-style: preserve-3d;
+    animation: cards 2s infinite alternate; }
+    .flip-box .flip__face {
+      width: 160px;
+      height: 220px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      box-shadow: 1px 1px 5px 1px rgba(91, 90, 90, 0.5);
+      border-radius: 5px;
+      backface-visibility: hidden; }
+      .flip-box .flip__face--front {
+        background-image: url("../assets/background.jpg");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat; }
+      .flip-box .flip__face--back {
+        box-sizing: border-box;
+        transform: rotateY(180deg);
+        position: relative;
+        padding: 20px;
+        background: white;
+        font-family: 'Montserrat', sans-serif;
+        line-height: 25px;
+        text-align: left; }
+        .flip-box .flip__face--back::before {
+          content: attr(data-type);
+          position: absolute;
+          top: 10px;
+          left: 10px;
+          font-size: 30px; }
+        .flip-box .flip__face--back::after {
+          content: attr(data-type);
+          position: absolute;
+          bottom: 10px;
+          right: 10px;
+          font-size: 30px;
+          transform: rotate(180deg); }
+
+.red {
+  color: #f44336; }
+  .red .icon {
+    color: #f44336;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px; }
+
+.black {
+  color: #424242; }
+  .black .icon {
+    color: #424242;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px; }
+
+@keyframes cards {
+  0% {
+    transform: rotateY(0deg); }
+  100% {
+    transform: rotateY(180deg); } }
