--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,2 +1,119 @@
 @import "normalize.css";
+@import "mixins";
+@import "responsive";
+@import "variables";
 
+.wrapper {
+  width: 100%;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.flip-box {
+  display: inline-block;
+  margin: 20px;
+  text-decoration: none;
+  perspective: 1000px;
+
+  &:hover {
+    .flip {
+      transform: rotateY(180deg);
+    }
+  }
+
+  .flip {
+    position: relative;
+    cursor: pointer;
+    transition: 0.5s;
+    transform-style: preserve-3d;
+    animation: cards 2s infinite alternate;
+    //animation-name: cards;
+    //animation-duration: 2s;
+    //animation-iteration-count: infinite;
+    //animation-direction: alternate;
+
+    &__face {
+      width: 160px;
+      height: 220px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      box-shadow: 1px 1px 5px 1px rgba(91, 90, 90, 0.5);
+      border-radius: 5px;
+      backface-visibility: hidden;
+
+
+      &--front {
+        background-image: url("../assets/background.jpg");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+
+      &--back {
+        box-sizing: border-box;
+        transform: rotateY(180deg);
+        position: relative;
+        padding: 20px;
+        background: white;
+        font-family: 'Montserrat', sans-serif;
+        line-height: 25px;
+        text-align: left;
+
+
+        &::before {
+          content: attr(data-type);
+          position: absolute;
+          top: 10px;
+          left: 10px;
+          font-size: 30px;
+        }
+
+        &::after {
+          content: attr(data-type);
+          position: absolute;
+          bottom: 10px;
+          right: 10px;
+          font-size: 30px;
+          transform: rotate(180deg);
+        }
+      }
+    }
+  }
+}
+
+.red {
+  color: #f44336;
+
+  .icon {
+    color: #f44336;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px;
+  }
+}
+
+.black {
+  color: #424242;
+
+  .icon {
+    color: #424242;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px;
+  }
+}
+
+@keyframes cards {
+  0% {
+    transform: rotateY(0deg);
+  }
+
+  100% {
+    transform: rotateY(180deg);
+  }
+}
