--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url(scss/_hamburger.css);
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Indie+Flower&family=Josefin+Sans&family=Montserrat:wght@400;600&family=Varela+Round&display=swap");
 html,
 body {
   padding: 0;
@@ -87,65 +89,167 @@ input:-webkit-autofill:active {
 ::-webkit-scrollbar-thumb:hover {
   background: #6b7c8a; }
 
-.title {
-  font-size: 12px; }
+body {
+  background-color: #f1f4f5;
+  height: 100%;
+  position: relative; }
+
+.wrapper {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto; }
 
 .header {
-  padding: 0 28px 0 26px;
-  display: flex;
-  height: 48px;
-  background-color: #D9D9D9;
-  justify-content: space-between;
-  align-items: center; }
-  .header .logo {
-    width: 181px;
-    height: 37px;
-    background-color: #F1F2AE; }
-  .header .title {
-    margin-left: 150px; }
-  .header .nav .list {
+  background-color: #987284; }
+  .header__content {
     display: flex;
-    gap: 19px; }
-    .header .nav .list .item {
-      width: 46px;
-      height: 37px;
-      background-color: #E7EFD6; }
-
-.first-screen {
-  margin-top: 19px;
-  background-color: #D9D9D9;
-  height: 145px;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+    justify-content: space-between;
+    font-size: 25px;
+    align-items: center; }
+    .header__content__title {
+      font-family: 'Indie Flower', sans-serif;
+      color: white; }
+    .header__content__svg-user {
+      width: 50px; }
+    .header__content .hamburger .hamburger-box {
+      width: 40px;
+      height: 24px; }
+      .header__content .hamburger .hamburger-box .hamburger-inner {
+        width: 40px;
+        height: 3px;
+        background-color: #FFFFFF; }
+        .header__content .hamburger .hamburger-box .hamburger-inner:before {
+          width: 40px;
+          height: 3px;
+          background-color: #FFFFFF; }
+        .header__content .hamburger .hamburger-box .hamburger-inner:after {
+          width: 40px;
+          height: 3px;
+          background-color: #FFFFFF; }
+    @media (max-width: 768px) {
+      .header__content .hamburger {
+        display: flex;
+        justify-content: flex-end;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        opacity: 1; } }
 
 .main {
-  margin-top: 24px;
   display: flex;
-  justify-content: space-between; }
-  .main .blog {
-    background-color: #D9D9D9;
-    padding: 17px 25px 16px 26px;
-    display: flex;
-    flex-direction: column;
-    gap: 27px;
-    align-items: center; }
-    .main .blog .title {
-      margin-bottom: 15px; }
-    .main .blog .blog-item {
-      width: 759px;
-      height: 70px;
-      background-color: #F9D7D7; }
-  .main .news {
-    background-color: #D9D9D9;
-    padding: 17px 28px 29px 25px;
-    display: flex;
-    flex-direction: column;
-    gap: 9px;
-    align-items: center; }
-    .main .news .title {
-      margin-bottom: 15px; }
-    .main .news .news-item {
-      width: 247px;
+  gap: 50px; }
+  .main .nav {
+    width: 150px;
+    padding-top: 20px; }
+    .main .nav .list {
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 15px; }
+      .main .nav .list .item {
+        padding-left: 15px;
+        display: flex;
+        align-items: center;
+        gap: 10px; }
+        .main .nav .list .item .nav-svg {
+          width: 30px;
+          height: 35px; }
+        .main .nav .list .item .link {
+          font-family: 'Josefin Sans', sans-serif;
+          font-weight: 600;
+          font-size: 20px;
+          color: #605d5d; }
+  .main .content {
+    padding-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 0; }
+    .main .content .card {
+      padding: 10px 7px;
       height: 110px;
-      background-color: #BDCDF6; }
+      display: flex;
+      gap: 20px;
+      justify-content: space-between; }
+      .main .content .card__img {
+        width: 64px;
+        height: 64px; }
+      .main .content .card__content {
+        padding-top: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 15px; }
+        .main .content .card__content__title {
+          font-family: 'Josefin Sans', sans-serif;
+          color: white;
+          font-size: 18px; }
+        .main .content .card__content__data {
+          font-family: 'Josefin Sans', sans-serif;
+          color: white;
+          font-weight: 800;
+          font-size: 25px; }
+      .main .content .card.card-reviews {
+        background-color: #F9B5AC; }
+      .main .content .card.card-customers {
+        background-color: #EE7674; }
+    .main .content .revenue {
+      grid-area: 1 / 1 / 2 / 2;
+      width: 240px;
+      height: 110px;
+      background-color: #75B9BE; }
+    .main .content .orders {
+      grid-area: 1 / 2 / 2 / 3;
+      width: 240px;
+      height: 110px;
+      background-color: #D0D6B5; }
+    .main .content .reviews {
+      grid-area: 1 / 3 / 5 / 4;
+      width: 240px; }
+      .main .content .reviews .info-reviews {
+        background-color: white;
+        margin-top: 3px;
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1); }
+        .main .content .reviews .info-reviews .user-reviews {
+          padding: 20px 10px;
+          display: flex;
+          gap: 10px;
+          align-items: center; }
+          .main .content .reviews .info-reviews .user-reviews__pic {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%; }
+          .main .content .reviews .info-reviews .user-reviews__data {
+            display: flex;
+            flex-direction: column;
+            gap: 5px; }
+            .main .content .reviews .info-reviews .user-reviews__data .feedback {
+              font-family: 'Josefin Sans', sans-serif;
+              font-size: 20px;
+              color: #605d5d; }
+    .main .content .customers {
+      grid-area: 1 / 4 / 5 / 5;
+      width: 240px; }
+      .main .content .customers .info-customers {
+        background-color: white;
+        margin-top: 3px;
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1); }
+        .main .content .customers .info-customers .new-customer {
+          padding: 20px 10px;
+          display: flex;
+          gap: 10px;
+          align-items: center; }
+          .main .content .customers .info-customers .new-customer__pic {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%; }
+          .main .content .customers .info-customers .new-customer__name {
+            font-family: 'Josefin Sans', sans-serif;
+            font-size: 20px;
+            color: #605d5d; }
+    .main .content .admin-info {
+      grid-area: 2 / 1 / 5 / 3;
+      margin-top: -20px;
+      width: 490px; }
